# cleanapp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: clean_files.rs  get_results.rs  main.rs  search.rs  search_library.rs
src/scan/: linux.rs  macos.rs  mod.rs  windows.rs
