[package]
name = "cleanapp"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.4"
walkdir = "2.5.0"
dirs = "6"
console = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
